Hopefully will now ignore Excel temp files.

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,12 @@ obj/
 *.booproj
 
 # ============= #
+# Excel generated  #
+# ============= #
+
+~$
+
+# ============= #
 # Emacs-related #
 # ============= #
 
